added the add toilet page and made the x go back to index page

--- a/app/views/toilets/new.html.erb
+++ b/app/views/toilets/new.html.erb
@@ -64,6 +64,11 @@
                 <i class="fas fa-times"></i>
             </button>
 
+            <button class="close-button" aria-label="Close" onclick="window.location.href='/toilets'">
+              <i class="fas fa-times"></i>
+            </button>
+
+
             <form class="mt-3">
                 <div class="mb-4">
                     <input
@@ -90,6 +95,10 @@
                 <button type="button" class="btn btn-primary w-100 mb-4">
                     Add Address
                 </button>
+                <h1>Add New Toilet</h1>
+
+
+
 
                 <div class="feature-checkboxes">
                     <div class="form-check">
