--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -91,7 +91,9 @@
                 <button class="btn btn-outline-primary"><i class="fas fa-search"></i></button>
             </div>
             <div class="col-auto">
-                <button class="btn btn-outline-primary"><i class="fas fa-plus"></i></button>
+               <%= link_to new_toilet_path, class: "btn btn-outline-primary" do %>
+                <i class="fas fa-plus"></i>
+               <% end %>
             </div>
         </div>
 
