--- a/app/views/toilets/show.html.erb
+++ b/app/views/toilets/show.html.erb
@@ -63,19 +63,33 @@
 <body>
     <div class="modal-sheet">
         <div class="container py-4">
-            <button class="close-button" aria-label="Close">
-                <i class="fas fa-times"></i>
-            </button>
-
+            <a class="btn close-button" href="/" role="button"> <i class="fas fa-times"></i></a>
             <h1 class="h2 mb-3">Pergamonmuseum Toilet</h1>
 
             <p class="text-muted">
                 Clean public restroom located in Pergamonmuseum. Accessible and well-maintained.
             </p>
 
-            <div class="toilet-images">
-                <img src="/placeholder.svg?height=100&width=150" alt="Pergamonmuseum exterior view" class="img-fluid">
-                <img src="/placeholder.svg?height=100&width=150" alt="Toilet interior view" class="img-fluid">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="..." alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="..." alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="..." alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
 
             <div class="map-preview" aria-label="Location map">
@@ -191,6 +205,8 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
+    </script>
+
 </body>
 </html>
