--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,20 +8,28 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body><%= render "shared/navbar" %>
   <header class="bg-primary-dark text-white py-3">
     <div class="container-fluid d-flex justify-content-between align-items-center">
       <div class="dropdown">
-        <button class="dropbtn btn-link text-white" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bars"></i></button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="/">Home</a>
-          <a class="dropdown-item" href="#">About</a>
-          <a class="dropdown-item" href="#">Report Issue</a>
-        </div>
+        <button class="btn btn-dropdown text-white" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="fas fa-bars"></i>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="/">Home</a></li>
+          <li><a class="dropdown-item" href="#">About</a></li>
+          <li><a class="dropdown-item" href="#">Report Issue</a></li>
+        </ul>
       </div>
-      <button class="btn btn-link text-white"><i class="fas fa-user"></i></button>
+      <a href="https://www.example.com">
+        <button class="btn btn-link text-white">
+          <i class="fas fa-user"></i>
+        </button>
+      </a>
     </div>
   </header>
   <%= render "shared/flashes" %>
