--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -53,9 +53,8 @@
         }
     </style>
 </head>
-<body>
-    
 
+<body>
     <div class="map-container position-relative">
         <!-- Map will be integrated here -->
         <div class="status-legend">
@@ -83,100 +82,27 @@
                <% end %>
             </div>
         </div>
+       <%@toilets.each do |toilet|%>
+        <%= link_to toilet_path(toilet) do %>
+          <div class="mt-3">
+              <div class="card mb-3">
+                  <div class="card-body">
+                      <div class="d-flex justify-content-between">
+                          <div>
+                              <h5 class="card-title"><%=toilet.name%></h5>
+                              <p class="card-text text-muted">0.2 km</p>
 
-        <div class="mt-3">
-            <div class="card mb-3">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h5 class="card-title"><%=Toilet.all[0].name%></h5>
-                            <p class="card-text text-muted">0.2 km</p>
-                            <a href="/toilets/0" class=" stretched-link"></a>
-                            <span class="badge badge-female-friendly text-white">Female-Friendly</span>
-                            <span class="badge badge-clean text-white">Clean</span>
-                        </div>
-                        <div class="text-warning">
-                            <i class="fas fa-star"></i>
-                            <span>4.5</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card mb-3">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h5 class="card-title"><%=Toilet.all[1].name%></h5>
-                            <p class="card-text text-muted">0.5 km</p>
-                            <a href="/toilets/1" class=" stretched-link"></a>
-                            <span class="badge badge-family-bathroom text-white">Family-Bathroom</span>
-                            <span class="badge badge-clean text-white">Clean</span>
-                        </div>
-                        <div class="text-warning">
-                            <i class="fas fa-star"></i>
-                            <span>4.2</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card mb-3">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h5 class="card-title"><%=Toilet.all[2].name%></h5>
-                            <p class="card-text text-muted">0.6 km</p>
-                            <a href="/toilets/2" class=" stretched-link"></a>
-                            <span class="badge badge-flinta-friendly text-white">FLINTA-Friendly</span>
-                            <span class="badge badge-clean text-white">Clean</span>
-                        </div>
-                        <div class="text-warning">
-                            <i class="fas fa-star"></i>
-                            <span>4.8</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card mb-3">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h5 class="card-title"><%=Toilet.all[3].name%></h5>
-                            <p class="card-text text-muted">1.1 km</p>
-                            <a href="/toilets/3" class=" stretched-link"></a>
-                            <span class="badge badge-female-friendly text-white">Female-Friendly</span>
-                            <span class="badge badge-paid text-white">Paid Entry</span>
-                        </div>
-                        <div class="text-warning">
-                            <i class="fas fa-star"></i>
-                            <span>4.5</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card mb-3">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h5 class="card-title"><%=Toilet.all[4].name%></h5>
-                            <p class="card-text text-muted">1.2 km</p>
-                            <a href="/toilets/4" class=" stretched-link"></a>
-                            <span class="badge badge-handycap-friendly text-white">Handycap-Friendly</span>
-                            <span class="badge badge-clean text-white">Clean</span>
-                        </div>
-                        <div class="text-warning">
-                            <i class="fas fa-star"></i>
-                            <span>4.5</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+                              <span class="badge badge-female-friendly text-white">Female-Friendly</span>
+                              <span class="badge badge-clean text-white">Clean</span>
+                          </div>
+                          <div class="text-warning">
+                              <i class="fas fa-star"></i>
+                              <span>4.5</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+            <% end %>
+          <% end %>
 </body>
 </html>
