--- a/app/views/toilets/show.html.erb
+++ b/app/views/toilets/show.html.erb
@@ -70,26 +70,26 @@
                 Clean public restroom located in Pergamonmuseum. Accessible and well-maintained.
             </p>
 
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div id="carouselExample" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="..." alt="First slide">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Smart_Toilet_Seat.jpg/800px-Smart_Toilet_Seat.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="..." alt="Second slide">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Smart_Toilet_Seat.jpg/800px-Smart_Toilet_Seat.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="..." alt="Third slide">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Smart_Toilet_Seat.jpg/800px-Smart_Toilet_Seat.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
 
             <div class="map-preview" aria-label="Location map">
