--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,6 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "index_page";
+@import "toilets_new";
+@import "toilets_show";
+@import "users_show";
