Added map to main page

--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -1,5 +1,8 @@
     <div class="map-container position-relative">
-        <!-- Map will be integrated here -->
+        <div style="width: 100%; height: 100%;"
+          data-controller="map"
+          data-map-markers-value="<%= @markers.to_json %>"
+          data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
         <div class="status-legend">
             <h6 class="fw-bold mb-2">Status Legend</h6>
             <div><span class="status-dot bg-success"></span>Available</div>
