--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -2,7 +2,8 @@
         <div style="width: 100%; height: 100%;"
           data-controller="map"
           data-map-markers-value="<%= @markers.to_json %>"
-          data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+          data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+          data-map-source-value="index"></div>
         <div class="status-legend">
             <h6 class="fw-bold mb-2">Status Legend</h6>
             <div><span class="status-dot bg-success"></span>Available</div>
