google navigation button in the show page

--- a/app/views/toilets/show.html.erb
+++ b/app/views/toilets/show.html.erb
@@ -33,9 +33,19 @@
             <!-- Map will be integrated here -->
         </div>
 
-        <button class="btn btn-primary w-100 mb-4">
-            Navigate to this toilet
+        <button
+          class="btn btn-primary w-100 mb-4"
+          onclick="navigateToToilet(<%= @toilet.latitude %>, <%= @toilet.longitude %>)">
+          Navigate to this toilet
         </button>
+
+
+        <script>
+          function navigateToToilet(lat, long) {
+            const url = `https://www.google.com/maps/dir/?api=1&destination=${lat},${long}`;
+            window.open(url, '_blank');
+          }
+        </script>
 
         <section class="mb-4">
             <h2 class="h4 mb-3">User Reviews</h2>
