--- a/app/views/toilets/show.html.erb
+++ b/app/views/toilets/show.html.erb
@@ -46,7 +46,7 @@
     </div>
 
         <button
-          class="btn btn-primary w-100 mb-4"
+          class="btn btn-primary w-100 mb-4 navigate-button"
           onclick="navigateToToilet(<%= @toilet.latitude %>, <%= @toilet.longitude %>)">
           Navigate to this toilet
         </button>
